Update meta tags and README polish

--- a/index.html
+++ b/index.html
@@ -5,7 +5,14 @@
     <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' fill='none' stroke='%23ffffff' stroke-width='2'%3E%3Cpath d='M12 22s8-4 8-10V5l-8-3-8 3v7c0 6 8 10 8 10'/%3E%3C/svg%3E" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Check if your email or phone number has been compromised in data breaches including the MOAB dataset." />
-    <title>LeakSniper - Data Breach Checker</title>
+    <title>LeakSniper – Email & Phone Breach Detection App</title>
+    <meta name="title" content="LeakSniper – Breach Checker Tool (Client-side)">
+    <meta name="keywords" content="leak checker, email breach, phone breach, MOAB, cybersecurity, react app, frontend breach detector, privacy tool">
+    <meta name="author" content="Alisha">
+    <meta property="og:title" content="LeakSniper – Email & Phone Breach Detection App" />
+    <meta property="og:description" content="Client-side tool to check breach exposure using MOAB dataset." />
+    <meta property="og:image" content="https://leaksniper.vercel.app/assets/demo.gif" />
+    <meta property="og:url" content="https://leaksniper.vercel.app" />
   </head>
   <body>
     <div id="root"></div>
